objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>OrderId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product2ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product2ID</relationshipLabel>
        <relationshipName>Product2ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>qty__c</fullName>
        <label>qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Order Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>